syntax = "proto3";
package pb;

message Entry {
    uint64 term = 1;
    uint64 index = 2;
    // Command
}

enum MessageType {
    MsgHeartbeatReq = 0;
    MsgHeartbeatRsp = 1;
    MsgVoteReq = 2;
    MsgVoteRsp = 3;
}

message Message {
    MessageType type = 1;
    uint64 term = 2;
    uint64 leaderId = 3;
    uint64 from = 4;
    uint64 to = 5;
    uint64 lastLogIndex = 6;
    uint64 lastLogTerm = 7;
    bool success = 8;
    uint64 errCode = 9;
}

//
//service RaftNode {
//    rpc SendHeartbeat (HeartbeatReq) returns (HeartbeatRsp) {
//    }
//    rpc SendVote (VoteReq) returns (VoteRsp) {
//    }
//}